--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "deployer/deployer": "^6.5",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
